# textool

./: .gitignore  README.md  pyproject.toml
samples/: 01-out.json  02-test.txt
src/textool/: cli.py
src/textool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/textool/extractors/: pii_extractor.py
