[project]
name = "textool"
version = "0.1.0"
description = "Text tool: metadata & PII checks for digitized documents."
requires-python = ">=3.11"
dependencies = ["typer>=0.12.3", "click==8.1.7", "rich==13.7.1"]

[project.scripts]
textool = "textool.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]